@startuml

class Cadena {
    - String nombre
    - ArrayList<Programa> listaPrograma
    + Cadena(String nombre)
    + String getNombre()
    + void setNombre(String nombre)
    + ArrayList<Programa> getListaPrograma()
}

class Programa {
    - String nombre
    - Cadena cadena
    - int temporadas
    - ArrayList<Empleado> listaEmpleados
    - ArrayList<Invitado> listaInvitados
    - Empleado director
    + Programa(String nombre, Cadena cadena, String director)
    + String getNombre()
    + void setNombre(String nombre)
    + Cadena getCadena()
    + void setCadena(Cadena cadena)
    + int getTemporadas()
    + void setTemporadas(int temporadas)
    + ArrayList<Empleado> getListaEmpleados()
    + ArrayList<Invitado> getListaInvitados()
    + Empleado getDirector()
    + void setDirector(Empleado director)
    + void invitadosTemporada(int temporada)
    + int vecesInvitado(String nombre)
    + void rastrearInvitado(String nombre)
    + boolean buscarInvitado(String nombre)
    + void invitadoAntes(String nombre)
    + void insertarEmpleado(String nombre, String cargo)
    + void insertarInvitado(String nombre, String profesion, int temporada)
}

class Empleado {
    - static int numId
    - final static String IDEP
    - final static String[] CARGOS
    - String id
    - String nombre
    - String cargo
    - Empleado director
    + Empleado(String nombre, String cargo)
    + String getId()
    + String getNombre()
    + void setNombre(String nombre)
    + String getCargo()
    + Empleado getDirector()
    + void setDirector(Empleado director)
    + String asignarId()
    + String asignarCargo(String cargo)
    + void asignarDirector(Empleado director)
}

class Invitado {
    - String nombre
    - String profesion
    - LocalDate fecha_visita
    - int temporada
    + Invitado(String nombre, String profesion, int temporada)
    + String getNombre()
    + String getProfesion()
    + int getTemporada()
    + LocalDate getFecha_visita()
    + void setNombre(String nombre)
    + void setProfesion(String profesion)
    + void setFecha_visita(LocalDate fecha_visita)
    + void setTemporada(int temporada)
    + void setFecha_visita()
}

Cadena "1" -- "*" Programa : contiene
Programa "1" -- "*" Empleado : tiene
Programa "1" -- "*" Invitado : recibe
Empleado "1" --> "0..1" Empleado : dirige
@enduml